tests/NormalTests/paczka2/big_fuzzy/19864618.err
Error in line 3: tCRT1sfL36Z A493 13,6
Error in line 13: tCRT1sfL36Z S498 23,4
Error in line 8: r9k9d54gye S498 51,3
Error in line 24: DePJbw S317 77,6
Error in line 28: NYHuoJL S482 91,1
Error in line 10: ZRawZj S482 1,7
Error in line 15: S498 S498 60,7
Error in line 48: ZRawZj S482 62,1
Error in line 52: DePJbw S482 44,7
Error in line 50: ZRawZj S48 19,8
Error in line 58: ZRawZj A493 47,4
Error in line 55: DePJbw S317 5,5
Error in line 70: DePJbw S482 63,4
Error in line 46: r9k9d54gye S498 250,2
Error in line 95: y8qh1Oh34E A493 68,0
Error in line 111: DePJbw S317 58,04
Error in line 110: tCRT1sfL36Z S317 25,4
Error in line 112: r9k9d54gye S317 74,1
Error in line 123: S4\8 S482 3\1,0
Error in line 120: y8qh1Oh34E S482 15,0
Error in line 115: S498 S482 99,0
Error in line 142: ZRawZj A493 33,9
Error in line 129: y8qh1Oh34E A493 16,7
Error in line 146: ZRawZj S317 39,0
Error in line 152: r9k9d54gye S317 540,0
Error in line 161: NYHuoJL S482 95,5
Error in line 173: y8qh1Oh34E S482 77,2
Error in line 178: NYHuoJL A493 83,8
Error in line 179: y8qh1Oh34E S498 58,8
Error in line 191: DePJbw S498 2,0
Error in line 184: NYHuoJL S317 31,2
Error in line 189: r9k9d54gye S482 89,4
Error in line 198: r9k9d54gye S498 40,3
Error in line 195: tCRT1sfL36Z A493 95,8
Error in line 212: r9k9d54gye A493 45,48
Error in line 204: S498 A493 69,2
Error in line 200: r9k9d54gye A493 61,0
Error in line 219: r9k9d54gye S317 61,8
Error in line 229: NYHuoJL A493 67,5
Error in line 237: ZRawZj S498 54,2
Error in line 238: ZRawZj S482 53,4
Error in line 232: S498 S498 73,9
